# mlops-assignment

./: .env.example  .gitignore  README.md  REPORT.md  docker-compose.override.yml  plan.md  pyproject.toml
agent/: evidence.py  execution.py  graph.py  prompts.py  schema.py  server.py
evals/: run_eval.py
infra/: prometheus.yml
infra/grafana/provisioning/dashboards/: serving.json
load_test/: driver.py
results/: eval_10.json  eval_5.json  eval_after_tuning.json  eval_baseline.json  eval_iter6.json  load_test.json
scripts/: sample_throughput.sh  start_agent.sh  start_vllm.sh
