[project]
name = "mlops-assignment"
version = "0.1.0"
description = "MLOps home assignment: LLM inference + observability"
requires-python = ">=3.11"
dependencies = [
    # Serving - targets Linux + NVIDIA GPU. vLLM 0.19+ requires CUDA wheels
    # (nvidia-cudnn-frontend), so this will NOT install on macOS / Apple Silicon.
    "vllm>=0.23.0,<0.24",
    "transformers>=5.5.1,<6.0",
    # Agent (major-version bounded; uv.lock pins exactly)
    "langgraph>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langfuse>=4.0,<5.0",
    # Server wrapper
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "prometheus-client>=0.20,<1.0",  # agent /metrics endpoint (SLO + error counters)
    # Data + utilities
    "datasets>=2.20",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "aiohttp>=3.9,<4.0",
    "tqdm>=4.66,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "evals", "load_test"]
